--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href=".css/header.css">
     <link rel="stylesheet" href=".css/style.css">
+    <link rel="stylesheet" href=".css/responsivo.css">
 
     <title>Protótipo02</title>
 
